Final deliverables/Final code/Kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  replicas: 5
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: flask-app-container
          image: flask-app-testing
          imagePullPolicy: Never
          ports:
         
   - containerPort: 5000
              protocol: TCP
Footer
