Final deliverables/Final code/Kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: 
ims-final
Footer
